school-app-181210/force-app/main/default/objects/ClassEnrollment__c/ClassEnrollment__c.object-meta.xml
<CustomObject>
    <description>The junction object to create a many to many relationship between students and classes.</description>
    <label>Class Enrollment</label>
    <nameField>
        <displayFormat>CE Id #{0000}</displayFormat>
        <label>Class Enrollment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>