school-app-181210/force-app/main/default/objects/ClassEnrollment__c/fields/CELabel__c.field-meta.xml
<CustomField>
    <fullName>CELabel__c</fullName>
    <formula>Student__r.Name &amp; &quot;-&quot; &amp;  Class__r.ClassCode__c</formula>
    <label>CE Label</label>
    <type>Text</type>
</CustomField>