school-app-181210/force-app/main/default/objects/ClassEnrollment__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Class Enrollments</relationshipLabel>
    <relationshipName>ClassEnrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>