school-app-181210/force-app/main/default/objects/ClassEnrollment__c/fields/ClassGrade__c.field-meta.xml
<CustomField>
    <fullName>ClassGrade__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Class Grade</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>