school-app-181210/force-app/main/default/objects/ClassEnrollment__c/validationRules/EnglishClassRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>EnglishClassRestriction</fullName>
    <active>true</active>
    <errorConditionFormula>IF(TEXT(Class__r.Subject__c) != &quot;English&quot;, false,
(  
     (( TEXT(Student__r.GradeLevel__c) == &quot;Freshman&quot; )
     &amp;&amp;
     ( TEXT(Class__r.Topic__c) != &quot;English I&quot; ))
     ||
     (( TEXT(Student__r.GradeLevel__c) == &quot;Sophomore&quot; )
     &amp;&amp;
     ( TEXT(Class__r.Topic__c) != &quot;English II&quot; ))
     ||
     (( TEXT(Student__r.GradeLevel__c) == &quot;Junior&quot; )
     &amp;&amp;
     ( TEXT(Class__r.Topic__c) != &quot;English III&quot; ))
     ||
     (( TEXT(Student__r.GradeLevel__c) == &quot;Senior&quot; )
     &amp;&amp;
     (TEXT(Class__r.Topic__c) != &quot;English IV&quot; ))
     
)
)</errorConditionFormula>
    <errorMessage>You must enroll a student in the English class associated with their class level.</errorMessage>
</ValidationRule>